@@ -1,5 +1,6 @@
 name    = MooseX-ClassCompositor
 author  = Ricardo Signes <rjbs@cpan.org>
+author  = Mark Jason Dominus <mjd@cpan.org>
 license = Perl_5
 copyright_holder = Ricardo Signes
 copyright_year   = 2011
