@@ -4,5 +4,9 @@ Revision history for {{$dist->name}}
           fix boneheaded arrangement of documentation; synopsis now comes FIRST
           and is labeled "SYNOPSIS" instead of "ABSTRACT"
 
+          give MJD an author credit
+
+          thank Pobox.com for paying for me to write this
+
 0.001     2011-08-19 11:29:33 America/New_York
           first release, split from internal Pobox projects
